--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,10 @@ a {
   }
 }
 @media (max-width: 568px) {
+  .main-head h1 {
+    padding-top: 30px;
+    font-size: 25px;
+  }
   .side-bar {
     top: 30%;
     left: -2px;
@@ -150,13 +154,10 @@ a {
     font-size: 15px;
     height: 30px;
     border-radius: 80px;
+    text-align: center;
   }
-  .info-2 {
-    position: absolute;
-    width: 100px;
-    font-size: 15px;
-    height: 30px;
-    border-radius: 80px;
+  .info-social {
+    width: 130px;
   }
 }
 /*end responsive */
