--- a/css/home.css
+++ b/css/home.css
@@ -20,10 +20,12 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
+.landing .head h1 {
+  font-size: 35px;
+}
 .landing .head h2 {
   margin-left: auto !important;
   font-size: 20px;
-
   line-height: 1.2;
   width: 375px;
 }
