--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,11 @@ body {
   background: var(--border-linear);
   border: 1px dashed;
 }
+.side-bar ul li:hover .info {
+  display: block;
+}
 .info {
+  display: none;
   position: absolute;
   top: 0%;
   left: 200%;
@@ -76,6 +80,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   height: max-content;
+  min-height: 100vh;
 }
 .main {
   display: none;
@@ -119,11 +124,6 @@ a {
 
 /* end nav */
 /*start responsive */
-@media (min-width: 768px) {
-  .all {
-    min-height: 100vh;
-  }
-}
 @media (max-width: 768px) {
   .main-head h1 {
     padding-top: 30px;
