--- a/css/social.css
+++ b/css/social.css
@@ -119,9 +119,9 @@
   }
 }
 @media (max-width: 768px) {
-  /* .all {
-    min-height: 270vh;
-  } */
+  .all {
+    height: 270vh;
+  }
   .box {
     display: none;
   }
@@ -134,7 +134,7 @@
 }
 @media (max-width: 576px) {
   .all {
-    min-height: 285vh;
+    height: 285vh;
   }
   .follow h1 {
     font-size: 45px;
