--- a/css/contact.css
+++ b/css/contact.css
@@ -48,6 +48,9 @@ textarea {
   }
 }
 @media (max-width: 768px) {
+  .all {
+    height: 130vh;
+  }
   .person {
     display: none;
   }
@@ -65,6 +68,9 @@ textarea {
   }
 }
 @media (max-width: 668px) {
+  .all {
+    height: 120vh;
+  }
   form {
     margin-left: 10px;
     margin: auto !important;
