--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -13,7 +13,7 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   background-size: cover;
-  background-position: center;
+  background-position: center !important;
   height: max-content;
   min-height: 150vh;
 }
